# poc_one

./: .gitignore  .tool-versions  README.md  mix.exs
assets/js/: app.js  word-count.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: poc_one.ex  poc_one_web.ex
lib/poc_one/: application.ex  deno.ex  mailer.ex  repo.ex
lib/poc_one_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/poc_one_web/controllers/: page_controller.ex
lib/poc_one_web/templates/layout/: root.html.heex
lib/poc_one_web/templates/page/: index.html.heex
lib/poc_one_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
native/deyas/: Cargo.toml  README.md
native/deyas/src/: lib.rs
priv/repo/: seeds.exs
test/: test_helper.exs
test/poc_one_web/controllers/: page_controller_test.exs
test/poc_one_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
