[package]
name = "deyas"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "deyas"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.23.0"
deno_core = "0.130.0"

serde = "1.0"
serde-transcode = "1.1"
serde_json = "1.0"
serde_rustler = { git = "https://github.com/avencera/serde_rustler.git", branch = "rustler-0.23" }
